<resources>
    <string name="app_name">汽车指南</string>
    <string name="user_setting">个人设置</string>
    <string name="setting_store">我的收藏</string>
    <string name="setting_wifi">流量优化</string>
    <string name="setting_textsize">字体大小</string>
    <string name="setting_push">新闻推送</string>
    <string name="setting_push_tips">开启后接收最新资讯</string>
    <string name="setting_cache">清除缓存</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_user">免责申明</string>

    <string name="cancel">取消</string>
    <string name="userinfo_head">选择照片</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>

    <string name="splash_text">阅览最前沿的汽车资讯</string>

    <string name="mianze">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;凡本网站转载的所有的文章、图片、音频视频文件等资料的版权归版权所有人所有，本站采用的非本站原创文章及图片等内容无法一一和版权者联系，如果 本网所选内容的文章作者及编辑认为其作品不宜上网供大家浏览，或不应无偿使用，请及时用电子邮件或电话通知我们，以迅速采取适当措施，避免给双方造成不必 要的经济损失。\n联系邮箱：piratenews@outlook.com</string>

    <string name="updateTitle">发现新版本</string>
    <string name="ignore">忽略版本</string>
    <string name="updateNow">立即更新</string>
    <string name="notNow">下次再说</string>
</resources>
