<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99232323">

    <LinearLayout
        android:id="@+id/update_frame"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/update_dialog_bg"
        android:orientation="vertical">

        <!-- Title -->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/padding_5dp"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/padding_5dp"
            android:text="@string/updateTitle"
            android:textAppearance="?android:attr/textAppearanceSearchResultTitle"
            android:textColor="@color/app_title_selected" />


        <!-- split -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_title_selected" />
        <!-- Content -->

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/update_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:focusable="true"
                    android:textAppearance="?android:attr/textAppearanceInverse"
                    android:text="@string/app_name"
                    android:textColor="@color/item_time_505050" />
            </LinearLayout>
        </ScrollView>

        <!-- Ignore CheckBox -->

        <!--<CheckBox-->
        <!--android:id="@+id/update_id_check"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="32dp"-->
        <!--android:text="@string/ignore"-->
        <!--android:textColor="@color/item_time_505050"-->
        <!--android:visibility="visible" />-->

        <!-- OK&Cancel Button -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update_id_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/update_button_ok_bg_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/updateNow"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/update_id_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/update_button_cancel_bg_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/notNow"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:textColor="@color/item_time_505050" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>